--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,13 @@
     <title>Mongo Scraper: Buzzfeed Edition</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/app.js"></script>
 </head>
 <body>
  
     {{{body}}}
+ 
  
 </body>
 </html>
