--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,14 @@
 {{!-- header --}}
-<h1 id="head">Mongo Scraper <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/BuzzFeed.svg/2000px-BuzzFeed.svg.png" id="pic"> edition</h1>
+<h1 id="head">Mongo Scraper <img src="https://www.logolynx.com/images/logolynx/32/320f3acdbdc0922ffe06b6fc164523cc.jpeg" id="pic"> edition</h1>
 
 {{!-- Nav --}}
 <nav id="nav">
     <button type="button" class="btn btn-secondary">Scrape New Articles!</button>
     <button type="button" class="btn btn-secondary">Clear Articles!</button>
 </nav>
-
+{{!-- Div box containing articles --}}
 <div id="contentbox">
-<h3 id="articledump">Article</h3>
-<hr>
-<p id="descdump">Yes, you can still call your mom every two minutes. OBVIOUSLY.</p>
-<button type="button" class="btn btn-danger" id="savebtn">Save Article</button>
+<h3 id="articledump"></h3> 
+<p id="descdump"></p>
+{{!-- <button type="button" class="btn btn-danger" id="savebtn">Save Article</button> --}}
 </div>
