--- a/public/style.css
+++ b/public/style.css
@@ -26,8 +26,14 @@
     text-align: center;
 }
 
+#savedcontentbox{
+    text-align: center;
+}
+
 #descdump {
     text-align: center;
+    margin: 5%;
+    
 }
 
 #savebtn {
@@ -35,4 +41,21 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5%;
+}
+
+.content {
+    color: red;
+}
+
+.saveartbtn {
+    text-decoration: none;
+    color: white;   
+}
+
+#wrapper {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 4%;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-radius: 25px;
 }
