--- a/views/savedarticles.handlebars
+++ b/views/savedarticles.handlebars
@@ -4,11 +4,11 @@
 
 {{!-- Nav --}}
 <nav id="nav">
-    <button type="button" class="btn btn-secondary" id="show">Scrape New Articles</button>
     <button type="button" class="btn btn-secondary" id="clear">Clear Articles</button>
-    <button type="button" class="btn btn-secondary" id="showallsaved"><a href="/saved" class="saveartbtn">Saved Articles</a></button>
+    <button type="button" class="btn btn-secondary" id="clear"><a href="/" class="saveartbtn">Home</a></button>
 </nav>
+
 {{!-- Div box containing articles --}}
-<div id="articledump">
-    <h4 id="descdump"></h4>
+<div id="savedcontentbox">
+    <div id="buttondump"></div>
 </div>
