--- a/views/savedarticles.handlebars
+++ b/views/savedarticles.handlebars
@@ -10,18 +10,16 @@
   <div id="buttondump"></div>
 </div>
 
-{{!-- Modal --}}
+{{!-- DIV Modal --}}
 <div id="notemodal" class="modal fade" role="dialog">
   <div class="modal-dialog">
-    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title"></h4>
         <button type="button" id="closeBtn" class="close" data-dismiss="modal">&times;</button>
       </div>
-      {{!-- BODY --}}
+      {{!-- Body --}}
       <div class="modal-body text-center">
-        
         <form class="note-form">
           <div class="form-note">
             <h3>Add a New Note</h3>    
@@ -31,7 +29,6 @@
           <br>
           <button type="submit" id="submitBtn">Submit</button>
         </form>
-
       </div>
       <div class="modal-footer">
         <button id="modalclosebutton" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
